bpk-lib/crates/macbat/macros/tests/trybuild_negative/event_unknown_key.stderr
error: unknown key `catagory`
 --> tests/trybuild_negative/event_unknown_key.rs:3:37
  |
3 | #[batpak(category = 1, type_id = 1, catagory = 2)]
  |                                     ^^^^^^^^
